--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-native-async-storage/async-storage": "2.2.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "expo-calendar": "~14.0.3",
+    "expo-notifications": "~0.30.3",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
